--- a/styles.css
+++ b/styles.css
@@ -38,24 +38,23 @@ body{
     }
 
     form {
+        
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 20px;
-        border: 1px solid #ccc;
         border-radius: 5px;
         background-color: #fff;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        
     }
 
     input[type="text"] {
-        margin-left: 35rem;
+        
         width: 300px;
         padding: 10px;
         margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-sizing: border-box;
+        border: none;
+        
     }
 
     button {
@@ -65,6 +64,17 @@ body{
         border: none;
         border-radius: 5px;
         cursor: pointer;
+    }
+
+    .dropdown {
+        margin-left: 32rem;
+        width: 70px;
+        padding: 10px;
+        margin-bottom: 10px;
+        border-radius: 5px;
+        box-sizing: border-box;
+        border: none;
+        
     }
 
     button:hover {
