changes in dashboard.php and style.css and login.php added logout.php

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,14 @@ header{
     justify-content: space-between;
 }
 
+
+
+
+.welcome{
+
+
+    
+}
 .nav-container a{
     text-decoration: none;
     color: #192f6a;
