--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,22 @@ header{
 
 
 
-.welcome{
+.home-text h1.welcome-text {
+    border-bottom: none;
+    font-size: 2.5rem;
+    color: var(--main-color);
+    font-weight: 600;
+    margin-bottom: 1.5rem;
+    margin-left: 2rem;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 
 
     
