--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ header{
 
 
 
-
+#welcomecss
 .home-text h1.welcome-text {
     border-bottom: none;
     font-size: 2.5rem;
@@ -168,9 +168,6 @@ header{
 }
 
 
-
-    
-}
 .nav-container a{
     text-decoration: none;
     color: #192f6a;
