--- a/styles.css
+++ b/styles.css
@@ -150,8 +150,8 @@ header{
 
 
 
-#welcomecss
-.home-text h1.welcome-text {
+
+.welcome {
     border-bottom: none;
     font-size: 2.5rem;
     color: var(--main-color);
